[gd_scene load_steps=8 format=3 uid="uid://bb55xth2gb0ec"]

[ext_resource type="Script" path="res://lib/button_connect.gd" id="1_0ki3m"]
[ext_resource type="FontFile" uid="uid://c5iqr7kaur2c1" path="res://assets/Fonts/letters/GamepauseddemoRegular-RpmY6.otf" id="1_jryqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwx4o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4c37"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riqgu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v17hu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wer7e"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ki3m")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_jryqm")
theme_override_font_sizes/font_size = 62
text = "Le meilleur platformer 3D"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Start" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(0.92549, 0.423529, 0, 1)
theme_override_colors/font_hover_color = Color(0.80986, 0.935828, 1.54018e-06, 1)
theme_override_colors/font_focus_color = Color(0.92549, 0.423529, 0, 1)
theme_override_fonts/font = ExtResource("1_jryqm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_qwx4o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a4c37")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_riqgu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v17hu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wer7e")
text = "Continue"

[node name="New" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(0.92549, 0.423529, 0, 1)
theme_override_colors/font_hover_color = Color(0.80986, 0.935828, 1.54018e-06, 1)
theme_override_colors/font_focus_color = Color(0.92549, 0.423529, 0, 1)
theme_override_fonts/font = ExtResource("1_jryqm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_qwx4o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a4c37")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_riqgu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v17hu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wer7e")
text = "New Game"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(0.925831, 0.422759, 3.85046e-07, 1)
theme_override_colors/font_hover_color = Color(0.80986, 0.935828, 1.54018e-06, 1)
theme_override_colors/font_focus_color = Color(0.92549, 0.423529, 0, 1)
theme_override_fonts/font = ExtResource("1_jryqm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_qwx4o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a4c37")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_riqgu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v17hu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wer7e")
text = "Quit"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
